# imgre

./: .editorconfig  .gitignore  README.md  config.toml.example  pyproject.toml
imgre/: __init__.py  __main__.py  cli.py  config.py  image.py  storage.py  ui.py
imgre/commands/: __init__.py  copy.py  list.py  remove.py  ui.py  upload.py
