[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imgre"
version = "0.1.0"
description = "Image Optimization and S3 Management Tool (Python port of imgood)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "click>=8.1.0",
    "boto3>=1.28.0",
    "pyvips>=2.2.1",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "mypy-boto3-s3>=1.28.0",
]

[project.scripts]
imgre = "imgre.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["imgre"]
